openapiを修正 (#99)
* 🐛 delete permalink endpoint and sth

* 🐛 generated

* 🔥 deleted permalink service

* 🔥 delete permalink generating endpoint

* 🔥 del2

* ✨ add snapshot fetching endpoint

* 🐛 miss

* 🐛 chore fixes
