# apps/backend/src/api/api.ts
@@ -1,6 +1,5 @@
 export * from './files.service';
 export * from './login.service';
 export * from './me.service';
-export * from './permalinks.service';
 export * from './registry.service';
 export * from './search.service';
